# LimitOrderBook-MatchingEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml  setup.py
CancelOrder/: CMakeLists.txt  CancelOrder.cpp  CancelOrder.h
Limit/: CMakeLists.txt  Limit.cpp
MatchResult/: CMakeLists.txt
Order/: CMakeLists.txt  order.cpp  order.h
OrderBook/: OrderBook.cpp  OrderBook.h
OrderBookEntry/: CMakeLists.txt  OrderBookEntry.cpp  OrderBookEntry.h
OrderBookTests/: CMakeLists.txt
OrderBookTests/tests/: CMakeLists.txt  MatchingEngineTests.cpp  SomeTests.cpp
OrderCore/: CMakeLists.txt  OrderCore.cpp  OrderCore.h
OrderStatus/: CMakeLists.txt  OrderStatus.h
OrderStatusResolver/: CMakeLists.txt  OrderStatusResolver.cpp
RejectOrder/: CMakeLists.txt  RejectOrder.h
RejectionResolver/: CMakeLists.txt  RejectionResolver.h
Security/: CMakeLists.txt  Security.h
benchmarks/: CMakeLists.txt  OrderBookBenchmarks.cpp
client/: CMakeLists.txt  session.hpp
lib/: CMakeLists.txt
lib/MDFeed/: CMakeLists.txt
lib/MDFeed/include/messages/: Messages.h
lib/MDFeed/include/publisher/: DeltaGenerator.h  MDAdapter.h  MarketDataPublisher.h  MulticastPublisher.h  MulticastPublisherThread.h
lib/MDFeed/include/receiver/: MulticastReceiver.h  ReceiverConfig.h
lib/MDFeed/include/utils/: PublisherConfig.h  RingBuffer.h
lib/MDFeed/python/: CMakeLists.txt  bindings.cpp
lib/MDFeed/src/publisher/: DeltaGenerator.cpp  MDAdapter.cpp  MarketDataPublisher.cpp  MulticastPublisher.cpp  MulticastPublisherThread.cpp
lib/MDFeed/src/receiver/: MulticastReceiver.cpp
lib/MatchResult/: MatchResult.cpp  MatchResult.h
lib/Order/: CMakeLists.txt  CancelOrder.cpp  CancelOrder.h  OrderCore.cpp  OrderCore.h  RejectOrder.cpp  RejectOrder.h  order.cpp  order.h
lib/OrderBook/: CMakeLists.txt  OrderBook.cpp  OrderBook.h
lib/OrderBook/include/core/: OrderBook.h
lib/OrderBook/include/entries/: OrderBookEntry.h
lib/OrderBook/include/orders/: Order.h  OrderCore.h
lib/OrderBook/python/: CMakeLists.txt  bindings.cpp
lib/OrderBook/src/core/: OrderBook.cpp
lib/OrderBook/src/entries/: OrderBookEntry.cpp
lib/OrderBook/src/orders/: Order.cpp  OrderCore.cpp
lib/OrderBook/src/securities/: Security.cpp
lib/OrderBookEntry/: OrderBookEntry.cpp  OrderBookEntry.h
lib/OrderEntry/: CMakeLists.txt
lib/OrderEntry/include/client/: OrderEntryClient.h
lib/OrderEntry/include/messages/: OrderMessages.h
lib/OrderEntry/include/server/: OrderEntryServer.h
lib/OrderEntry/include/utils/: OrderBuffer.h  ServerConfig.h
lib/OrderEntry/python/: CMakeLists.txt  bindings.cpp
lib/OrderEntry/src/client/: OrderEntryClient.cpp
lib/OrderEntry/src/server/: OrderEntryServer.cpp
lib/OrderStatusResolver/: CMakeLists.txt  OrderStatusResolver.h
lib/RejectionResolver/: CMakeLists.txt  RejectionResolver.cpp  RejectionResolver.h
lib/Security/: Security.cpp  Security.h
orderbook/: __init__.py  _mdfeed_receiver.pyi  _orderentry_client.pyi
realtime/: CMakeLists.txt  QOrderBook.cpp  QOrderBook.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  listener.hpp  session.cpp  session.hpp  util.cpp  util.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  session.cpp
src/exchange/: Exchange.cpp  Exchange.h  SymbolManager.cpp  SymbolManager.h  main.cpp
src/order_client/: main.cpp
src/order_server/: main.cpp
src/realtime/: mainwindow.cpp
src/realtime/qcustomplot/: CMakeLists.txt
src/server/: CMakeLists.txt  listener.cpp  main.cpp
src/simulation/: CMakeLists.txt  QOrderBook.cpp  mainwindow.cpp  mainwindow.h
src/simulation_python/: main.py  market_simulator.py  order_book.py  requirements.txt
src/simulation_python/gui/: main_window.py
stubs/orderbook/: _orderbook.pyi
tests/: CMakeLists.txt  MatchingEngineTests.cpp  OrderBookEntryTests.cpp  OrderBookTests.cpp
